--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -31,10 +31,10 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
+  "text-level-1": "不太行",
+  "text-level-2": "还可以哟",
+  "text-level-3": "太强辣",
+  "text-level-4": "您?",
   "text-level-5": "人?",
   "time-over": "倒计时多了",
   "rank-title": "吃掉小鹿乃-排行榜",
